--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,4 +14,6 @@
  *= require_self
  *= require bootstrap
  *= require glucose_readings
+ *= require ./datepicker
+ *= require ./datepicker-bs4
  */
