--- a/app/views/patients/glucose_readings/new.html.erb
+++ b/app/views/patients/glucose_readings/new.html.erb
@@ -1,2 +1,23 @@
-<h1>GlucoseReadings#new</h1>
-<p>Find me in app/views/glucose_readings/new.html.erb</p>
+<div class="d-flex justify-content-center m-4">
+    <h2> Add New Glucose Readings</h2>
+  </div>
+<div class="d-flex justify-content-center m-4" style="width: 100%">
+  <%= form_for(@glucose_reading, url: patients_glucose_readings_path) do |f| %>
+  <div class="row">
+    <div class="col-lg-12">
+      <div class="form-group">
+        <label class="f-bold">Glucose Level</label>
+        <%= f.number_field :level, class: 'form-control', min: 0, required: true %>
+        <% if @glucose_reading.errors && @glucose_reading.errors.messages.present? %>
+          <span class="text-danger"><%= @glucose_reading.errors.full_messages.first %></span>
+        <% end %>
+      </div>
+    </div>
+  </div>
+    <div class="row">
+    <div class="col-lg-12 mt-3">
+      <%= f.submit 'Save Readings', class: 'btn btn-primary' %>
+    </div>
+  </div>
+  <% end %>
+</div>
