added header and updated registration form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,16 @@
 	<%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
       </div>
 
+      <div class="mb-3">
+				<%= f.label :first_name, class: "form-label" %>
+				<%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
+      </div>
+      
+      <div class="mb-3">
+				<%= f.label :last_name, class: "form-label" %>
+				<%= f.text_field :last_name, autofocus: true, class: 'form-control' %>
+      </div>
+
       <div class="row mb-4">
 	<div class="col">
 	  <%= f.label :password, class: "form-label" %>
