--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,6 +10,16 @@
 	<%= f.email_field :email, autocomplete: 'email', class: 'form-control' %>
       </div>
 
+      <div class="mb-3">
+				<%= f.label :first_name, class: "form-label" %>
+				<%= f.text_field :first_name, autofocus: true, class: 'form-control' %>
+      </div>
+      
+      <div class="mb-3">
+				<%= f.label :last_name, class: "form-label" %>
+				<%= f.text_field :last_name, autofocus: true, class: 'form-control' %>
+      </div>
+
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
 	<div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
       <% end %>
