--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
     <% if alert %>
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
+    <% if current_user.present? %>
+    <%= render partial: 'layouts/header' %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
